--- a/src/Component/ComponentSection.scss
+++ b/src/Component/ComponentSection.scss
@@ -1,5 +1,5 @@
 .section-container {
-  height: 380px;
+  height: 450px;
   width: 100%;
   background-color: #f5f5f5;
   position: relative;
@@ -15,7 +15,7 @@
       align-items: center;
       margin-bottom: 25px;
       span {
-        font-size: 30px;
+        font-size: 25px;
         font-weight: 550;
       }
       button {
@@ -31,24 +31,30 @@
       }
     }
     .section-slice {
-      height: 243px;
+      height: 300px;
       .section-slice-child {
         display: flex;
-        // flex-flow: ;
-        justify-content: space-between;
         align-items: center;
+        img {
+          width: 250px;
+          height: 250px;
+          object-fit: cover;
+          border-radius: 999px;
+        }
         .option-child {
-          & div:nth-last-of-type(1) {
-            width: 100%;
-            height: 180px;
-            background-image: url("../assets/background.png");
-            background-size: cover;
-            background-repeat: no-repeat;
-          }
-          p {
+          display: flex;
+          flex-flow: column;
+          justify-content: center;
+          align-items: center;
+          & p:nth-of-type(1) {
             font-size: 23px;
             font-weight: 500;
-            margin-top: 10px;
+            margin-top: 15px;
+          }
+          & p:nth-of-type(2) {
+            font-size: 23px;
+            color: gray;
+            margin-top: -15px;
           }
         }
         div {
