--- a/src/homePage/header/headerSystem.scss
+++ b/src/homePage/header/headerSystem.scss
@@ -7,21 +7,25 @@
   background: linear-gradient(90deg, #0078ff, #00c6ff);
   color: #fff;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  position: sticky;
-  top: 0;
-  z-index: 1000;
   .logo {
-    font-size: 1.8rem;
-    font-weight: bold;
-    text-transform: uppercase;
-    letter-spacing: 2px;
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
     margin-right: auto; /* Đẩy các mục bên phải cách logo */
+    border: 2px groove rgb(169, 168, 168);
+    img {
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      object-fit: cover;
+    }
   }
 
   .nav {
-    margin-right: 50px;
+    margin-right: 60px;
     .nav-list {
       display: flex;
+      gap: 13px;
       list-style: none;
       margin: 0;
       padding: 0;
@@ -38,6 +42,11 @@
           background: #fff;
           color: #0078ff;
           transform: scale(1.1);
+        }
+        &.active {
+          background: #fff;
+          color: #0078ff;
+          font-weight: bold; /* Giữ màu hover */
         }
       }
     }
