--- a/src/Layout/LayoutHomePage.scss
+++ b/src/Layout/LayoutHomePage.scss
@@ -2,7 +2,8 @@
   .homePage_header {
     position: sticky;
     top: 0;
-    z-index: 9999;
+    z-index: 100;
     background: white;
+    width: 101.5%;
   }
 }
