--- a/src/Layout/layoutSystem.scss
+++ b/src/Layout/layoutSystem.scss
@@ -1,7 +1,9 @@
-// .LayoutAdmin-container {
-//   .LayoutAdmin-header {
-//     position: sticky;
-//     top: 0;
-//     z-index: 9999;
-//   }
-// }
+.LayoutSystem-container {
+  // .LayoutSystem-header {
+  //   position: relative;
+  //   position: sticky;
+  //   top: 0;
+  //   z-index: 100;
+  //   background: white;
+  // }
+}
