--- a/src/homePage/section/doctor/sectionDoctor.scss
+++ b/src/homePage/section/doctor/sectionDoctor.scss
@@ -46,10 +46,16 @@
           flex-flow: column;
           justify-content: center;
           align-items: center;
+
           & p:nth-of-type(1) {
             font-size: 23px;
             font-weight: 500;
             margin-top: 15px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            width: 300px;
+            text-align: center;
           }
           & p:nth-of-type(2) {
             font-size: 23px;
