--- a/src/homePage/section/specialty/scss/sectionSpecialty.scss
+++ b/src/homePage/section/specialty/scss/sectionSpecialty.scss
@@ -1,7 +1,7 @@
-.section-container {
+.section-specialist-container {
   height: 450px;
   width: 100%;
-  background-color: #fffefe;
+  background-color: #f4f1f1;
   position: relative;
   z-index: 2;
   padding: 30px 90px;
